@@ -29,7 +29,7 @@ is tags($dom.find('Document/L[1]/LI[1] | Document/H1[1]')), 'LI H1', 'union';
 my $li = $dom.first('Document/L/LI[1]');
 is tags($li.find('*')), 'Lbl LBody', 'relative search';
 is tags($li.find('/*')), 'Document', 'absolute search';
-is $li.text, "\n• \nNAME ";
+is $li.text, '• NAME ';
 is tags($li.find('LBody/Reference/Link/@TextDecorationType')),'TextDecorationType';
 is $li.first('LBody/Reference/Link/@TextDecorationType'), 'Underline';
 is-deeply [$li.find('LBody/Reference/Link/@TextDecorationType/*')], [], 'attribute child elements (nonsense)';
