@@ -1,7 +1,11 @@
 Revision history for PDF-Tags-Reader
 
 {{$NEXT}}
-    - Fixed dropping of some new-lines
+    - Add detection of implicit newlines for Td (TextMove) when
+      significant vertical displacement is detected. This is needed
+      to work with Cairo/PDF, which makes significant use of this
+      operator for line positioning. Also improves the XML generation
+      from the PDF Specification in PDF::ISO_32000.
 
 0.0.2  2021-12-28T06:45:07+13:00
     - Adjust tests for PDF::Tags 0.0.13, which no longer inserts extra Span tags.
